src/objects/pca__Payment_Integration__c.object
<CustomObject>
    <fields>
        <fullName>pca__Account_Number_Field__c</fullName>
        <label>Account Number Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Bank_BIC_Field__c</fullName>
        <label>Bank BIC Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Bank_Name_Field__c</fullName>
        <label>Bank Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Branch_BIC_Field__c</fullName>
        <label>Branch BIC Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Branch_Name_Field__c</fullName>
        <label>Branch Name Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__CHAPS_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports CHAPS payments.</inlineHelpText>
        <label>CHAPS Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Contact_Address_Field__c</fullName>
        <label>Contact Address Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Contact_City_Field__c</fullName>
        <label>Contact City Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Contact_Fax_Field__c</fullName>
        <label>Contact Fax Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Contact_Phone_Field__c</fullName>
        <label>Contact Phone Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Contact_Postalcode_Field__c</fullName>
        <label>Contact Postalcode Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Direct_Debit_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports Direct Debit payments.</inlineHelpText>
        <label>Direct Debit Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Faster_Payments_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. Specifies whether the sort code supports Faster Payments.</inlineHelpText>
        <label>Faster Payments Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Setting__c</fullName>
        <label>Setting</label>
        <referenceTo>pca__Setting__c</referenceTo>
        <relationshipLabel>Payment Integrations</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>pca__Sort_Code_Field__c</fullName>
        <label>Sort Code Field</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pca__Status_Field__c</fullName>
        <inlineHelpText>This should ideally be a check box. We can populate this field for you with the validation state of the bank details. Specifying this field and adding it into a validation rule allows you to force users to enter validated details.</inlineHelpText>
        <label>Validation Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Payment Integration</label>
    <nameField>
        <label>Payment Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>